# HUST-miniVPN

./: .gitignore  CMakeLists.txt  LICENSE.txt  Makefile  README.md  docker-compose.yml  tlsclient.cpp  tlsserver.cpp  upload.sh
Client/: Client.cpp  Client.h  SockClient.cpp  SockClient.h
Epoll/: Epoll.h
Server/: Server.cpp  Server.h  SockServer.cpp  SockServer.h
Tun/: IoctlIfSock.cpp  IoctlIfSock.h  Tun.cpp  Tun.h
app/: CMakeLists.txt  Dockerfile  Makefile  get_source.sh  tlsclient.cpp  tlsserver.cpp
app/cert/: Makefile
app/src/Client/: SSLClient.cpp  SSLClient.h
app/src/Epoll/: Epoll.h
app/src/Server/: InterfaceInfo.cpp  SSLServer.h  VirtualAddress.cpp
cert/: Makefile
cmd/: start-client.sh  start-server.sh  telnet.sh
docker/client/: Dockerfile
docker/expiredClient/: Dockerfile
docker/telnetServer/: Dockerfile  entrypoint.sh
docker/tlsServer/: Dockerfile
src/: Client.cpp  Client.h  Server.cpp  Server.h
src/Client/: SSLClient.cpp
src/Epoll/: Epoll.cpp  Epoll.h
src/Model/: Packet.h
src/Server/: InterfaceInfo.h  SSLServer.cpp  VirtualAddress.cpp  VirtualAddress.h
src/Sock/: SockBase.cpp  SockBase.h  SockClient.cpp  SockClient.h  SockServer.cpp  SockServer.h
src/Tun/: IoctlIfSock.cpp  IoctlIfSock.h  Tun.cpp  Tun.h  TunController.cpp  TunController.h
